feat: add accounts for user
